I got the index page to look the way its supposed to, all the data in a table then broken up into table rows and each individual piece of data has its own table cell as well. I achieved this through a while loop and using ejs to inject html and populate the dom dynamically

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,23 @@
         <h1>
             Budgtr ALL
         </h1>
+        <table>
+        <% for(let i = 0; i < Budget.length; i++){ %>
+            <tr>
+                <td>
+                    <%= Budget[i].date %>
+                </td>
+                <td>
+                    <a href=""" target="_blank">
+                    <%= Budget[i].name %>
+                    </a>
+                </td>
+                <td>
+                    <%= Budget[i].amount %>
+                </td>
+            </tr>
+        <% } %>
+        </table>
     </div>
 </body>
 </html>
