I got the new route working. Now I can add a new item and have it posted back onto the index page and joi the rest of the budget items. Next is adding an edit option.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,11 @@
         <h1>
             Budgtr ALL
         </h1>
+        <nav>
+            <form method='get' action='/budget/new'>
+                <button type='submit'>New Item </button>
+            </form>
+        </nav>
         <table>
         <% for(let i = 0; i < Budget.length; i++){ %>
             <tr>
@@ -31,5 +36,6 @@
         <% } %>
         </table>
     </div>
+    
 </body>
 </html>
